--- a/pag2.html
+++ b/pag2.html
@@ -35,7 +35,7 @@
         </header>
 
         <nav>
-            <a href="site-basico.html" rel="prev">html</a>
+            <a href="index.html" rel="prev">html</a>
         </nav>
 
     <main>
@@ -44,7 +44,7 @@
                 CSS
             </h1>
             <p>
-                <a href="site-basico.html" rel="prev">html</a>
+                <a href="index.html" rel="prev">html</a>
             </p>
             <p>
                 no mesmo arquivo da de usar os tres tipos de css (externo, interno, inline)
