--- a/pag2.html
+++ b/pag2.html
@@ -401,15 +401,15 @@
             </p>
             <hr>
             <p>
-                <div>div ocupa toda linha (sem alteração)</div>
+                <div id="titulo-div">div ocupa toda linha (sem alteração)</div>
             </p>
-                <div id="d1">
+                <div class="id">
                     01
                 </div>
-                <div id="d2">
+                <div class="id">
                     02
                 </div>
-                <div id="d3">
+                <div class="id">
                     03
                 </div>
         </article>
