--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             </picture>
             <hr>
             <h2>Áudio</h2>
-            <audio src="audio/Rap do Deidara (Naruto) - A ARTE É A EXPLOSÃO _ NERD HITS (320 kbps).mp3" controls autoplay>Deidara</audio> <!--Simplificada (n recomendada)-->
+            <audio src="audio/Rap do Deidara (Naruto) - A ARTE É A EXPLOSÃO _ NERD HITS (320 kbps).mp3" controls>Deidara</audio> <!--Simplificada (n recomendada)-->
             <!--MP3 WAV OGG-->
 <p class="pre">
 &lt;audio preload="metadata" controls autoplay loop>
@@ -249,7 +249,7 @@ ARTE É A EXPLOSÃO _ NERD HITS (320 kbps).mp3"-
 &lt;/audio>
 
 </p>
-            <audio preload="metadata" controls autoplay loop>
+            <audio preload="metadata" controls autoplay loop volume="20%">
              <source src="audio/Rap do Deidara (Naruto) - A ARTE É A EXPLOSÃO _ NERD HITS (320 kbps).mp3" type="audio/mpeg">
              <source src="audio/Rap do Deidara (Naruto) - A ARTE É A EXPLOSÃO _ NERD HITS (320 kbps).ogg" type="audio/ogg">
              <source src="audio/Rap do Deidara (Naruto) - A ARTE É A EXPLOSÃO _ NERD HITS (320 kbps).mp3" type="audio/wav">
