--- a/pag2.html
+++ b/pag2.html
@@ -37,6 +37,13 @@
             &lt;/style> <br>
             &lt;/head&gt;
             <br>
+
+            <audio class="flymarsh" preload="metadata" controls autoplay loop>
+                <source src="audio/Marshmello_-_Fly_ft_Leah_Culver__Luvmp.com.mp3" type="audio/mpeg">
+                <source src="audio/Marshmello_-_Fly_ft_Leah_Culver__Luvmp.com.ogg" type="audio/ogg">
+                <source src="audio/Marshmello_-_Fly_ft_Leah_Culver__Luvmp.com.mp3" type="audio/wav">
+                <p>caso não apareça o player baixe aqui <a href="audio/Marshmello_-_Fly_ft_Leah_Culver__Luvmp.com.zip" download="Marshmello_-_Fly_ft_Leah_Culver__Luvmp.com.mp3" type="application/zip">Deidara</a></p>
+               </audio>
                 
             </p><hr>
         </header>
@@ -380,7 +387,7 @@
             <img width="300px" src="imagens/10.png" alt="10">
             <img width="300px" src="imagens/11.png" alt="11">
             <img width="300px" src="imagens/12.png" alt="12">
-            <img width="300px" src="imagens/13.png" alt="13">
+            <img width="300px" src="imagens/13.png" alt="13">   
             
             <h2>Trabalhando com fontes</h2>
             <img width="300px" src="imagens/F1.png" alt="f1">
