--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     </nav>
         
     <main>
+        <img src="imagens/frame (Telefone).png" alt="qrcode">
         <article>
             <h1>Atalhos:</h1>
             <p>
