--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
     </nav>
         
     <main>
-        <img src="imagens/frame (Telefone).png" alt="qrcode">
+        <div class="img-qr">
+            <img src="imagens/frame (Telefone).png" alt="qrsite1">
+        </div>
+        <div class="fotomy">
+            <img src="imagens/perfils.jpg" alt="minha foto">
+        </div>
         <article>
             <h1>Atalhos:</h1>
             <p>
