--- a/index.html
+++ b/index.html
@@ -46,12 +46,19 @@
     </nav>
         
     <main>
+
+        <div class="Disc">
+            <iframe src="https://discord.com/widget?id=611990325522858004&theme=dark" width="100%" height="300px" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+        </div>
+
         <div class="img-qr">
             <img src="imagens/frame (Telefone).png" alt="qrsite1">
         </div>
+
         <div class="fotomy">
             <img src="imagens/perfils.jpg" alt="minha foto">
         </div>
+
         <article>
             <h1>Atalhos:</h1>
             <p>
