--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
 
         <div class="fotomy">
-            <img src="imagens/perfils.jpg" alt="minha foto">
+            <p class="fotomy"><img src="imagens/perfils.jpg" alt="minha foto"></p>
         </div>
 
         <article>
