--- a/pag2.html
+++ b/pag2.html
@@ -374,30 +374,30 @@
         <hr>
         <article>
             <h2>Representações de cores</h2>
-            <img width="600px" src="imagens/unknown.png" alt="representação de cores">
-            <img width="300px" src="imagens/1.png" alt="1">
-            <img width="300px" src="imagens/2.png" alt="2">
-            <img width="300px" src="imagens/3.png" alt="3">
-            <img width="300px" src="imagens/4.png" alt="4">
-            <img width="300px" src="imagens/5.png" alt="5">
-            <img width="300px" src="imagens/6.png" alt="6">
-            <img width="300px" src="imagens/7.png" alt="7">
-            <img width="300px" src="imagens/8.png" alt="8">
-            <img width="300px" src="imagens/9.png" alt="9">
-            <img width="300px" src="imagens/10.png" alt="10">
-            <img width="300px" src="imagens/11.png" alt="11">
-            <img width="300px" src="imagens/12.png" alt="12">
-            <img width="300px" src="imagens/13.png" alt="13">   
+            <div class="sc"> <img width="600px" src="imagens/unknown.png" alt="representação de cores"> </div>
+            <div class="sc"> <img width="300px" src="imagens/1.png" alt="1"> </div>
+            <div class="sc"> <img width="300px" src="imagens/2.png" alt="2"> </div>
+            <div class="sc"> <img width="300px" src="imagens/3.png" alt="3"> </div>
+            <div class="sc"> <img width="300px" src="imagens/4.png" alt="4"> </div>
+            <div class="sc"> <img width="300px" src="imagens/5.png" alt="5"> </div>
+            <div class="sc"> <img width="300px" src="imagens/6.png" alt="6"> </div>
+            <div class="sc"> <img width="300px" src="imagens/7.png" alt="7"> </div>
+            <div class="sc"> <img width="300px" src="imagens/8.png" alt="8"> </div>
+            <div class="sc"> <img width="300px" src="imagens/9.png" alt="9"> </div>
+            <div class="sc"> <img width="300px" src="imagens/10.png" alt="10"> </div>
+            <div class="sc"> <img width="300px" src="imagens/11.png" alt="11"> </div>
+            <div class="sc"> <img width="300px" src="imagens/12.png" alt="12"> </div>
+            <div class="sc"> <img width="300px" src="imagens/13.png" alt="13"> </div>   
             
             <h2>Trabalhando com fontes</h2>
-            <img width="300px" src="imagens/F1.png" alt="f1">
-            <img width="300px" src="imagens/F2.png" alt="f2">
-            <img width="300px" src="imagens/F3.png" alt="f3">
-            <img width="300px" src="imagens/F4.png" alt="f4">
-            <img width="300px" src="imagens/F5.png" alt="f5">
-            <img width="300px" src="imagens/F6.png" alt="f6">
-            <img width="300px" src="imagens/F7.png" alt="f7">
-            <img width="300px" src="imagens/F8.png" alt="f8">
+            <div class="sc"> <img width="300px" src="imagens/F1.png" alt="f1"> </div>
+            <div class="sc"> <img width="300px" src="imagens/F2.png" alt="f2"> </div>
+            <div class="sc"> <img width="300px" src="imagens/F3.png" alt="f3"> </div>
+            <div class="sc"> <img width="300px" src="imagens/F4.png" alt="f4"> </div>
+            <div class="sc"> <img width="300px" src="imagens/F5.png" alt="f5"> </div>
+            <div class="sc"> <img width="300px" src="imagens/F6.png" alt="f6"> </div>
+            <div class="sc"> <img width="300px" src="imagens/F7.png" alt="f7"> </div>
+            <div class="sc"> <img width="300px" src="imagens/F8.png" alt="f8"> </div>
             <p>font-family: 1ª fonte a testar, 2ª fonte a testar (se não funcionar a pimeira), 3ª fonte generica <!--recomendado pegar no site css web safe fonte family--> </p>
             <img width="300px" src="imagens/Fo1.png" alt="fo1">
             <h2>Fontes</h2>
@@ -454,13 +454,13 @@
             <hr>
             <p>Aninhamento = dentro outra (Boneca Russa)</p>
             <h2>Boxs</h2>
-            <img width="300px" src="imagens/b1.png" alt="b1">
-            <img width="300px" src="imagens/b2.png" alt="b2">
-            <img width="300px" src="imagens/b3.png" alt="b3">
-            <img width="300px" src="imagens/b4.png" alt="b4">
-            <img width="300px" src="imagens/b5.png" alt="b5">
-            <img width="300px" src="imagens/b6.png" alt="b6">
-            <img width="300px" src="imagens/b7.png" alt="b7">
+            <div class="sc"><img width="300px" src="imagens/b1.png" alt="b1"><div>
+            <div class="sc"><img width="300px" src="imagens/b2.png" alt="b2"><div>
+            <div class="sc"><img width="300px" src="imagens/b3.png" alt="b3"><div>
+            <div class="sc"><img width="300px" src="imagens/b4.png" alt="b4"><div>
+            <div class="sc"><img width="300px" src="imagens/b5.png" alt="b5"><div>
+            <div class="sc"><img width="300px" src="imagens/b6.png" alt="b6"><div>
+            <div class="sc"><img width="300px" src="imagens/b7.png" alt="b7"><div>
             <p>user agent = navegador</p>
             <p>
                 Para inline nao pode ser colocado width e height
