--- a/pag2.html
+++ b/pag2.html
@@ -50,6 +50,8 @@
 
         <nav>
             <a href="index.html" rel="prev">html</a>
+
+            <a href="ex022/index.html" rel="next">Cap19</a>
         </nav>
 
     <main>
@@ -246,6 +248,25 @@
 
                 <li>
                     size: tamanho da imagem
+                    <ul>
+                        <li>
+                            auto
+                        </li>
+
+                        <li>
+                            100% left e right 100% top e bottom
+                        </li>
+
+                        <li>
+                            contain 
+                            <!-- exibe 100% da imagem sem cortar -->
+                        </li>
+
+                        <li>
+                            cover
+                            <!-- exibe 100% da imagem cortando-a -->
+                        </li>
+                    </ul>
                 </li>
 
                 <li>
