--- a/ex022/index.html
+++ b/ex022/index.html
@@ -8,6 +8,7 @@
     <style>
         body {
             background-image: url('imgs-ex022/wallpaper001.jpg');
+            margin: 0px;
         }
 
         div.quadrado {
@@ -31,9 +32,50 @@
             background-image: url('imgs-ex022/pattern003.png');
         }
 
+        nav {
+        padding: 15px;
+        background-color: #b1b1b1e3;
+        box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.349);
+        margin-bottom: 15px;
+        }
+
+        nav > a {
+            background-color: #316d8d;
+            color: rgb(255, 255, 255);
+            padding: 10px;
+            text-decoration: none;
+            font-weight: bold;
+            border-radius: 20px;
+            transition-duration: 0.1s;
+        }
+
+        nav > a:hover {
+            background-color: #061e3a6e;
+            color: rgb(0, 0, 0);
+            text-decoration: none;
+            border-radius: 17px;
+        }
+
+        nav > a:active {
+            border-radius: 10px;
+            color: rgb(255, 255, 255);
+        }
+
     </style>
 </head>
+
+
+
 <body>
+
+    <nav>
+        <a href="../index.html" rel="prev">HTML</a>
+
+        <a href="../pag2.html" rel="prev">CSS</a>
+
+
+    </nav>
+
     <div class="quadrado" id="q1">
         
     </div>
