Upgrade nav estilo e cabeçalho img

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <br>
             &lt;title>Meu site&lt;/title&gt;
             <br>
-            <h2>Comandos:</h2>
+            <h2 id="headerblack">Comandos:</h2>
             
-            link:favicon
+            <p id="headerblack">link:favicon</p>
             <br>
         &lt;/head&gt;
         <br>
