--- a/pag2.html
+++ b/pag2.html
@@ -27,16 +27,18 @@
                 <br>
                 &lt;title>Meu site&lt;/title&gt;
                 <br>
-                <h2>Comandos:</h2>
+                <h2 id="headerblack">Comandos:</h2>
                 
-                link:favicon
-                <br>
-                &lt;style> <br>
-                body {<br>
-                } <br>
-            &lt;/style> <br>
-            &lt;/head&gt;
-            <br>
+                <p id="headerblack">
+                    link:favicon
+                    <br>
+                    &lt;style> <br>
+                    body {<br>
+                    } <br>
+                                &lt;/style> <br>
+                                &lt;/head&gt;
+                                <br>
+                </p>
 
             <audio class="flymarsh" preload="metadata" controls autoplay loop>
                 <source src="audio/Marshmello_-_Fly_ft_Leah_Culver__Luvmp.com.mp3" type="audio/mpeg">
