--- a/ex022/index.html
+++ b/ex022/index.html
@@ -7,7 +7,7 @@
     <title>Teste de Imagem de Fundo</title>
     <style>
         body {
-            background-image: url('imgs-ex022/wallpaper001.jpg');
+            background-image: url('../imagens/wallpaper.jpg');
             margin: 0px;
         }
 
@@ -34,7 +34,7 @@
 
         nav {
         padding: 15px;
-        background-color: #b1b1b1e3;
+        background-color: black;
         box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.349);
         margin-bottom: 15px;
         }
