--- a/ex022/index.html
+++ b/ex022/index.html
@@ -39,28 +39,39 @@
         margin-bottom: 15px;
         }
 
-        nav > a {
-            background-color: #316d8d;
-            color: rgb(255, 255, 255);
-            padding: 10px;
-            text-decoration: none;
-            font-weight: bold;
-            border-radius: 20px;
-            transition-duration: 0.1s;
-        }
+        nav {
+    background-color: black;
+    padding: 15px;
+    box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.349);
+}
 
-        nav > a:hover {
-            background-color: #061e3a6e;
-            color: rgb(0, 0, 0);
-            text-decoration: none;
-            border-radius: 17px;
-        }
+nav > a {
+    
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.473);
+    background-color: #316d8d;
+    color: rgb(255, 255, 255);
+    padding: 10px;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 20px;
+    transition-duration: 0.1s;
+}
 
-        nav > a:active {
-            border-radius: 10px;
-            color: rgb(255, 255, 255);
-        }
+nav > a:hover {
+    box-shadow: 0px 0px 4px white;
+    text-shadow: 2px 2px 3px #b1b1b1e3;
+    background-color: #053c7c8e;
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    border-radius: 17px;
+}
 
+nav > a:active {
+    box-shadow: 0px 0px 4px white;
+    background-color: #1168cc8e;
+    border-radius: 10px;
+    color: rgb(255, 255, 255);
+}
     </style>
 </head>
 
