--- a/ex022/index.html
+++ b/ex022/index.html
@@ -7,8 +7,14 @@
     <title>Teste de Imagem de Fundo</title>
     <style>
         body {
-            background-image: url('../imagens/wallpaper.jpg');
+            background: rgb(73, 73, 73) url('../imagens/wallpaper.jpg') center center no-repeat fixed;
+            background-size: cover;
+            height: 100vh;
             margin: 0px;
+        }
+
+        main {
+            background: gray url('../imagens/fundo-preto-background114-1024x640.png') center no-repeat cover fixed;
         }
 
         div.quadrado {
@@ -87,15 +93,15 @@ nav > a:active {
 
     </nav>
 
-    <div class="quadrado" id="q1">
+    <main>
+        <div class="quadrado" id="q1">
         
-    </div>
-    <div class="quadrado" id="q2">
-
-    </div>
-    <div class="quadrado" id="q3">
-
-    </div>
+        </div>
+        <div class="quadrado" id="q2">
+        </div>
+        <div class="quadrado" id="q3">
+        </div>
+    </main>
 
 </body>
 </html>
