--- a/index.html
+++ b/index.html
@@ -56,13 +56,16 @@
             <iframe src="https://discord.com/widget?id=611990325522858004&theme=dark" width="100%" height="300px" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
         </div>
 
-            <div class="imgid">
-                <img class="qr" src="imagens/frame (Telefone).png" alt="qrsite1">
+            <section id="meuids">
+                <article id="qrcode1">
+                    
+                </article>
 
-                <img class="fotomy" src="imagens/perfils.jpg" alt="minha foto">
-            </div>
+                <article id="myfoto">
+
+                </article>
+            </section>
         
-
         <article>
 
             <aside>
