--- a/pag2.html
+++ b/pag2.html
@@ -51,9 +51,11 @@
         </header>
 
         <nav>
-            <a href="index.html" rel="prev">html</a>
+            <a href="index.html" rel="prev">Html</a>
 
             <a href="ex022/index.html" rel="next">Cap19</a>
+
+            <a href="des12/index.html" rel="next">Proj Cordel</a>
         </nav>
 
     <main>
@@ -117,14 +119,29 @@
                     <li>justify = alinhado</li>
                 </ul></li>
                 <li>shadow: posição para lateral (%) posição para baixo (%) dispersamento (%) cor</li>
-                <li>decoration:<ul> <li>underline = sublinhado</li></li>
-                </ul>
+                <li>decoration:<ul> <li>underline = sublinhado</li></li></ul>
                 <li>
                     indent (afastamento do incio do texto): px
+                </li>
+                <li>
+                    transform: <ul>
+                                    <li>
+                                        uppercase = letra maiuscula
+                                    </li>
+                                </ul>
                 </li>
                 </ul>
                     </p>
                     <p>
+
+            <h4>line-</h4>     
+            
+            <ul>
+                <li>
+                    height = espaçamento entre as linhas
+                </li>
+            </ul>
+
             <h4>font-</h4>
             <ul>
                 <li>
@@ -188,6 +205,15 @@
                     style
                     <ul>
                         <li>italic</li>
+                    </ul>
+                </li>
+
+                <li>
+                    variant 
+                    <ul>
+                        <li>
+                            small-caps = letra maiusculas mas as primeira letras maiores
+                        </li>
                     </ul>
                 </li>
             
