--- a/ex022/index.html
+++ b/ex022/index.html
@@ -113,7 +113,7 @@ nav > a:active {
 
         <a href="../pag2.html" rel="prev">CSS</a>
 
-        <a href="des12/index.html" rel="next">Proj Cordel</a>
+        <a href="../des12/index.html" rel="next">Proj Cordel</a>
 
 
     </nav>
