upgrade nav menu

--- a/ex022/index.html
+++ b/ex022/index.html
@@ -137,5 +137,8 @@ nav > a:active {
 
     </main>
 
+    <footer>
+        Ll <a href="https://github.com/LucasLiberio">Meu github</a>
+    </footer>
 </body>
 </html>
