--- a/pag2.html
+++ b/pag2.html
@@ -51,11 +51,17 @@
         </header>
 
         <nav>
-            <a href="index.html" rel="prev">Html</a>
+            <div id="menu">
+                <p class="menup">
+                    Menu:
+                    <a class="menua" href="index.html" rel="prev">Html</a>
 
-            <a href="ex022/index.html" rel="next">Cap19</a>
+                    <a class="menua" href="ex022/index.html" rel="next">Cap19</a>
 
-            <a href="des12/index.html" rel="next">Proj Cordel</a>
+                    <a class="menua" href="des12/index.html" rel="next">Proj Cordel</a>
+                    
+                </p>
+            </div>
         </nav>
 
     <main>
@@ -600,8 +606,8 @@
     </main>
 
     <footer>
-        Criado por LS
-        <a href="#">clique aqui</a>
+        Criado por Ll
+        <a href="https://github.com/LucasLiberio">clique aqui</a>
     </footer>
 
 </body>
