--- a/des12/index.html
+++ b/des12/index.html
@@ -106,7 +106,7 @@
     </main>
 
     <footer>
-        <p>Site criado por <a href="#">Gustavo guanabara</a></p>
+        <p>Site aprendido pelas aulas do <a href="#">Gustavo guanabara</a></p>
     </footer>
 </body>
 </html>
