update anatomia de uma tabela

--- a/index.html
+++ b/index.html
@@ -441,13 +441,25 @@
                                 <li>
                                     table row = linha de tabela = tr
                                     <ul>
+
                                         <li>
-                                            table header = cabeçalho de tabela
+                                             legenda/ titulo = caption
+                                        </li>
+
+                                        <li>
+                                            table header = cabeçalho de tabela = th <br>
+                                            cmd scope="col"
                                         </li>
 
                                         <li>
                                             table data = dado de tabela = td
                                         </li>
+
+                                        <li>
+                                            titulo na tbela = th <br>
+                                            cmd scope="row"
+                                        </li>
+
                                     </ul>
                                 </li>
                             </ul>
