update tabela e nav sem efeito glass

--- a/index.html
+++ b/index.html
@@ -470,45 +470,72 @@
             </aside>
 
             <table>
-                <tr> <!-- Primeira linha -->
-                    <td>
-                        A1
-                    </td>
+                <thead>
+                    <tr>
+                        <th>
+                            Coluna 1
+                        </th>
 
-                    <td>
-                        B1
-                    </td>
+                        <th>
+                            Coluna 2
+                        </th>
 
-                    <td>
-                        C1
-                    </td>
-                </tr>
+                        <th>
+                            Coluna 3
+                        </th>
+                    </tr>
+                </thead>
 
-                <tr>
-                    <td>
-                        A2
-                    </td>
+                <tbody>
+                    <tr> <!-- Primeira linha -->
+                        <td>
+                            A1
+                        </td>
+                        <td>
+                            B1
+                        </td>
+                        <td>
+                            C1
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            A2
+                        </td>
+                        <td>
+                            B2
+                        </td>
+                        <td>
+                            C2
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>A3</td>
+                        <td>B3</td>
+                        <td>C3</td>
+                    </tr>
+                    <tr>
+                        <td>A4</td>
+                        <td>B4</td>
+                        <td>C4</td>
+                    </tr>
+                </tbody>
 
-                    <td>
-                        B2
-                    </td>
+                <tfoot>
+                    <tr>
+                        <th>
+                            total:
+                        </th>
 
-                    <td>
-                        C2
-                    </td>
-                </tr>
+                        <td>
+                            numero
+                        </td>
 
-                <tr>
-                    <td>A3</td>
-                    <td>B3</td>
-                    <td>C3</td>
-                </tr>
-
-                <tr>
-                    <td>A4</td>
-                    <td>B4</td>
-                    <td>C4</td>
-                </tr>
+                        <td>
+                            numero
+                        </td>
+                    </tr>
+                </tfoot>
             </table>
 
         </article>
