--- a/pag2.html
+++ b/pag2.html
@@ -472,6 +472,17 @@
             <h4>
                 content: codeº do emoji
             </h4>
+            <h4>
+                overflow
+                <!-- transborda / faz com que o site n tenha rolagem lateral, somente a div ou o elemento que tenha esse comando -->
+            </h4>
+            <p>
+                <ul>
+                    <li>
+                        auto
+                    </li>
+                </ul>
+            </p>
             
             
         </aside>
