--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
         <aside>
             <h2>Iframe</h2>
-
-            <iframe src="https://discord.com/widget?id=611990325522858004&theme=dark" width="100%" height="300px" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+            <!-- Tamanho padrão 300x150 -->
+            <iframe src="https://discord.com/widget?id=611990325522858004&theme=dark" width="100%" height="300px" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"><a href="https://discord.com/" target="_blank">Discord</a></iframe>
         </aside>
 
         
