Iframe local HTML no CSS 21/11/22

--- a/pag2.html
+++ b/pag2.html
@@ -69,6 +69,12 @@
             <h1>
                 CSS
             </h1>
+
+            <aside>
+                <h2>HTML</h2>
+                <iframe id="iframehtml" src="index.html" frameborder="0" allowtransparency="true"></iframe>
+            </aside>
+
             <p>
                 <a href="index.html" rel="prev">html</a>
             </p>
