--- a/pag2.html
+++ b/pag2.html
@@ -71,8 +71,14 @@
             </h1>
 
             <aside>
-                <h2>HTML</h2>
-                <iframe id="iframehtml" src="index.html" frameborder="0" allowtransparency="true"></iframe>
+                <h2>Iframe</h2>
+
+                <aside class="amostra">
+                    <a class="botão" href="https://discord.com/widget?id=611990325522858004&theme=dark" target="amostra">Discord</a>
+                    <a class="botão" href="index.html" target="amostra">HTML</a>
+                </aside>
+
+                <iframe name="amostra" id="iframehtml" src="index.html" frameborder="0" allowtransparency="true"></iframe>
             </aside>
 
             <p>
@@ -522,10 +528,18 @@
 
                     </li>
 
+                    <li>
+                    &lt;iframe&gt; name: nome para linkar o &lt;a&gt; <br>
+                      &lt;a&gt; target: nome do <strong>name</strong> do iframe
+                    </li>
+
+
+
                 </ul>
             
             
         </aside>
+
         <hr>
         <article>
             <aside>
