--- a/pag2.html
+++ b/pag2.html
@@ -532,6 +532,11 @@
                     &lt;iframe&gt; name: nome para linkar o &lt;a&gt; <br>
                       &lt;a&gt; target: nome do <strong>name</strong> do iframe
                     </li>
+                    
+                    <li>
+                        srcdoc
+                        para aparecer dentro de um iframe n ao abrir a pagina uma img ou uma escrita.
+                    </li>
 
 
 
