--- a/pag2.html
+++ b/pag2.html
@@ -78,7 +78,7 @@
                     <a class="botão" href="index.html" target="amostra">HTML</a>
                 </aside>
 
-                <iframe name="amostra" id="iframehtml" src="index.html" frameborder="0" allowtransparency="true"></iframe>
+                <iframe name="amostra" id="iframehtml" src="video/RL.webm.webm" frameborder="0" allowtransparency="true"></iframe>
             </aside>
 
             <p>
