--- a/pag2.html
+++ b/pag2.html
@@ -538,6 +538,34 @@
                         para aparecer dentro de um iframe n ao abrir a pagina uma img ou uma escrita.
                     </li>
 
+                    <li>
+                        Sandbox: <ul>
+                            <li>
+                                Sandbox = Não deixa nada passa
+                            </li>
+                            <li>
+                                Allow-same-origin = permitindo coisas da mesma origem
+                            </li>
+                            <li>
+                                Allow-forms = permitindo formularios
+                            </li>
+                            <li>
+                                allow-scripts = permitindo script
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li>
+                        referrerpolicy: <ul>
+                            <li>
+                                no-referrer = total retrição
+                            </li>
+                            <li>
+                                no-referrer-when-downgrade
+                            </li>
+                        </ul>
+                    </li>
+
 
 
                 </ul>
