--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </aside>
 
             <!-- Tamanho padrão 300x150 -->
-            <iframe name="amostra" src="video/RL.mp4" width="100%" height="300px" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+            <iframe name="amostra" src="video/RL.mp4" width="100%" height="300px" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts" referrerpolicy="no-referrer"></iframe>
         </aside>
 
         
