--- a/index.html
+++ b/index.html
@@ -72,6 +72,18 @@
                 target="amostra">
                 CSS
                 </a>
+                <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1877.7098606627671!2d-45.252102640627605!3d-19.737314386169142!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94b33e7a85702adf%3A0xb17ab35927000fb!2sPar%C3%B3quia%20Nossa%20Senhora%20do%20Bom%20Despacho!5e0!3m2!1spt-BR!2sbr!4v1670339384191!5m2!1spt-BR!2sbr"
+                target="amostra">
+                Google Map
+                </a>
+                <a href="https://embed.waze.com/iframe?zoom=17&lat=-19.737638&lon=-45.251682&ct=livemap"
+                target="amostra">
+                Waze
+                </a>
+                <a href="https://docs.google.com/presentation/d/e/2PACX-1vRQQqt8cfiy8P6BmQFerJxThsOouqkYexDLu_zrJPebSeqq2z7-xjFvyRXZpPhs486nLPt2X03nfZmY/embed?start=false&loop=false&delayms=3000"
+                target="amostra">
+                Reunião
+                </a>
             </aside>
 
             <!-- Tamanho padrão 300x150 -->
