--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                 <a class="menua" href="audio/Rap do Deidara (Naruto) - A ARTE É A EXPLOSÃO _ NERD HITS (320 kbps).zip" download="Rap do Deidara (Naruto) - A ARTE É A EXPLOSÃO _ NERD HITS (320 kbps).mp3" type="application/zip">Deidara</a>
 
-                <a class="menua" href="des12/index.html" rel="next">Proj Cordel</a>
+                <a class="menua" href="des12/index.html" rel="next">Cordel</a>
 
                 <a class="menua" href="pacote-d013/index.html">Social</a>
             </div>
