--- a/pag2.html
+++ b/pag2.html
@@ -322,13 +322,21 @@
             </ul>
                     </p>
                     <p>
-            <h4> (min[320px]-max[800px]) <!--subtrando com a margem e o padding-->width:</h4> %; = largura
+            <h4> (min[320px]-max[800px]) <!--subtraindo com a margem e o padding-->width:</h4> %; = largura
                     </p>
                     <p>
             <h4>padding:</h4> %; = acochuamento
                     </p>
                     <p>
-            <h4>box-shadow:</h4> (inset or outset) [Não é necessario] posição para horizontal (%) posição para vertical (%) espalhamento (%) cor;
+            <h4>box</h4>
+            <ul>
+                <li>-shadow: (inset or outset) [Não é necessario] posição para horizontal (%) posição para vertical (%) espalhamento (%) cor;</li>
+
+                <li>
+                    sizing: border-box (para n haver interferencia da borda em mover outros conteudos)
+                </li>
+
+            </ul>
                     </p>
                     <p>
             color:
@@ -446,14 +454,28 @@
                 </li>
             </ul>
                     </p>
-            <p>
-                <h4>transition-</h4> <!-- duraçâo da açâo de transição -->
+            
+            <h4>transition-</h4> <!-- duraçâo da açâo de transição -->
+                <p>
+                    nome da funçao / o tempo, nome da segunda / o tempo;
+                </p>
+
                 <ul>
                     <li>
                         duration: tempo;
                     </li>
                 </ul>
-            </p>
+            
+            <h4>
+                Transform:
+            </h4>
+            <ul>
+                <li>
+                    translate (horizontal, vertical)
+                    <!-- negativo para esquerda ou para cima | positivo para direita ou para baixo -->
+                </li>
+            </ul>
+
             <h4>
                 line-
             </h4>
