update nav/link and form

--- a/pag2.html
+++ b/pag2.html
@@ -57,9 +57,9 @@
                 </p>
                     <section class="menum">
                         <a class="menua" href="index.html" rel="prev">Html</a>
-                        <a class="menua" href="ex022/index.html" rel="next">Cap19</a>
-                        <a class="menua" href="des12/index.html" rel="next">Proj Cordel</a>
-                        
+
+                        <a class="menua" href="Link.html">Links</a>
+
                     </section>
                 
             </div>
